# habidomo

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  pyrightconfig.json  requirements.txt
backend/: README.md
cli/: app.py
context/: ai-workflow-rules.md  architecture.md  code-standards.md  data-model.md  progress-tracker.md  project-overview.md  style-guide.md  tech-stack.md  ui-context.md
context/features/: 02_sections_management.md  03_houses_management.md  04_neighbors_management.md  05_payments_management.md  07_reports.md
context/tickets/: 0001_sections_management_crud.md
docs/: API_CONTRACTS.md  ARCHITECTURE.md  PRD.md  STYLE_GUIDE.md  TECH_STACK.md
docs/features/: 01_authentication.md  02_sections_management.md  03_houses_management.md  04_neighbors_management.md  05_payments_management.md  06_expenses_management.md  07_reports.md
hello-cdk/: package-lock.json  package.json
hello-cdk/test/: hello-cdk.test.ts
shared/: models.py
shared/repositories/: abstract_repository.py  sections_repository.py
shared/service_layer/: sections_service.py
tests/: test_models.py  test_repositories.py  test_service_layer.py
